--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 bin/
 release/bin/
-
+autopunchtimecard-*
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
